I change this as etc
etc in head section

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
      <meta name="discription" content="This attempt is about gathering talented people around the world for divercified purposes.we categorize talented people as service providers(SP) and if 
      somebody is having a service from the SP thay are konwn to be service users(SU).SU can benifit by having their work done by making a deal with a SP.Especially, we beleave we will provide 
      more online jobes for the community and it will be a gerat solution for the unemployment"/>
-     <meta name="keywords" content="vectorart, art, onlinejobs, graphicdesigning, portraitart, portrait"/>
+     <meta name="keywords" content="vectorart, art, onlinejobs, graphicdesigning, portraitart, portrait etc"/>
      <meta http-equiv=" author" content="themiya herath"/>
      <meta http-equiv="pragma" content="no-cache"/>
      <meta http-equiv="expires" content="Mon, 31 Jan 2022 23:59:59 GMT" />
